--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@eelkevdbos/elysia-basic-auth": "^1.4.1",
     "elysia": "^0.8.16"
   }
 }
