make sure we have free access to docker containers (i dont want to do DinD)

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,6 @@
 {
     "port-range":"59000-59100",
     "webserver": {"port":"8100"},
-    "authentication": {"username":"admin","password":"admin"}
+    "authentication": {"username":"admin","password":"admin"},
+    "should-be-running-as":["root"]
 }
