--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@eelkevdbos/elysia-basic-auth": "^1.4.1",
+    "@types/dockerode": "^3.3.23",
     "dockerode": "^4.0.2",
     "elysia": "^0.8.16",
     "ssh2": "^1.15.0"
