--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/dockerode": "^3.3.23",
     "dockerode": "^4.0.2",
     "elysia": "^0.8.16",
-    "ssh2": "^1.15.0"
+    "ssh2": "^1.15.0",
+    "systeminformation": "^5.21.24"
   }
 }
