feat: use portscanner (idk if works)

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@eelkevdbos/elysia-basic-auth": "^1.4.1",
     "@types/dockerode": "^3.3.23",
+    "@types/portscanner": "^2.1.4",
     "cpu-features": "^0.0.9",
     "dockerode": "^4.0.2",
     "elysia": "^0.8.16",
     "http-proxy": "^1.18.1",
     "node-http-proxy": "^0.2.4",
+    "portscanner": "^2.2.0",
     "ssh2": "^1.15.0",
     "systeminformation": "^5.21.24"
   }
