--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/dockerode": "^3.3.23",
     "@types/portscanner": "^2.1.4",
     "cpu-features": "^0.0.9",
-    "dockerode": "^4.0.2",
+    "dockerode": "4.0.2",
     "elysia": "^0.8.16",
     "http-proxy": "^1.18.1",
     "node-http-proxy": "^0.2.4",
