--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "http-proxy": "^1.18.1",
     "node-http-proxy": "^0.2.4",
     "portscanner": "^2.2.0",
-    "ssh2": "^1.15.0",
+    "ssh2": "1.14.0",
     "systeminformation": "^5.21.24"
   }
 }
